--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,20 @@ nav {
 }
 
 nav ul {
+    width: 50%;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 nav li {
     font-size: 30px;
+    color: black;
+    text-decoration: none;
+}
+
+.main-content {
+    width: 75%;
 }
 
 #car-dog {
@@ -50,10 +57,12 @@ nav li {
 }
 
 .steps {
-    height: 200px;
-    width: 200px;
     display: flex;
-}
+    justify-content: space-between;
+    flex-direction: row;
+    height: 200px;
+    width: 100%;
+} 
 
 #calendar-pic {
     height: 100px;
@@ -75,10 +84,37 @@ nav li {
     width: 100px;
 }
 
+aside {
+    background-color: white;
+    width: 25%;
+    height: 100%;ß
+}
+
+#green-box {
+    border: 3px;
+    width: 100px;
+    height: 80px;
+    border-radius: 10px;
+    padding: 5px;
+    background-color: green;
+    color: white;
+}
+
+#cartoon-dog {
+    height: 100px;
+    width: 100px;
+}
+
+#spick-n-span-logo {
+    height: 100px;
+    width: 100px;
+}
+
 footer {
         display: flex;
         background-color: rgb(65, 236, 170) ;
-        color: black;
+        color: gray;
         font-size: 17px;
         padding: 10px;
+        text-align: center;
     }
