--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,9 @@ header {
     display: flex;
     background-color: rgb(65, 236, 170);
     width: 100%;
+    height: 150px;
 }
+
 
 nav {
     display: flex;
@@ -15,7 +17,7 @@ nav {
     width: 100%;
     background-color: rgb(65, 236, 170);
     align-items: end;
-    height: 100px;
+    height: 150px;
 }
 
 nav ul {
@@ -33,7 +35,17 @@ nav li a {
 
 main {
     display: flex;
-    width: 75%;
+    flex-direction: row-reverse;
+    width: 100%;
+}
+
+.curve {
+    height: 450px;
+    left: -15px;
+    position: absolute;
+    top: -20px;
+    width: 100%;
+
 }
 
 #car-dog {
@@ -55,12 +67,13 @@ h2 {
 
 .bring-to-you {
     position: absolute;
-    left: 16px;
+    left: 290px;
     bottom: 200px;
     color: white;
     font-weight: bold;
     font-size: 80px;
     width: 600px;
+    height: 40px;
 }
 
 .steps {
@@ -69,10 +82,17 @@ h2 {
     flex-direction: row;
     height: 200px;
     width: 100%;
+    position: relative;
+    left: 15px;
 } 
 
+.steps p {
+    font-size: 25px;
+    flex-basis: 20%;
+}
+
 #calendar-pic {
-    height: 100px;
+    height: 130px;
     width: 100px;
 }
 
@@ -100,13 +120,18 @@ h2 {
     margin: 0 -65px;
 }
 
+#car-pic {
+    height: 130px;
+    width: 100px;
+}
+
 #sponge-pic {
-    height: 100px;
+    height: 130px;
     width: 100px;
 }
 
 #animated-dog-pic {
-    height: 100px;
+    height: 130px;
     width: 100px;
 }
 
@@ -117,30 +142,50 @@ aside {
 }
 
 #green-box {
+    font-size: 55px; 
     border: 3px;
-    width: 200px;
+    width: 100%;
     height: 200px;
     border-radius: 10px;
     padding: 5px;
-    background-color: green;
+    background-color: rgba(9, 164, 60, 0.713);
     color: white;
 }
 
+#green-box p {
+    margin-top: 20px;
+}
+
 #cartoon-dog {
-    height: 300px;
-    width: 200px;
+    height: 360px;
+    width: 100%;
+    margin-top: -100px;
+    position: relative;
 }
 
 #spick-n-span-logo {
     height: 300px;
-    width: 200px;
+    width: 100%;
 }
 
 footer {
         display: flex;
+        justify-content: flex-end;
+        width: 75%;
         background-color: rgb(65, 236, 170) ;
         color: gray;
         font-size: 17px;
         padding: 10px;
         text-align: center;
     }
+
+footer p {
+    width: 100%;
+    
+}
+
+.footer {
+    display: flex;
+    justify-content: flex-end;
+} 
+
