--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
+}
 
 header {
     display: flex;
@@ -18,22 +22,30 @@ nav {
     background-color: rgb(65, 236, 170);
     align-items: end;
     height: 150px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+
 }
 
 nav ul {
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    z-index: 100;
 }
 
 nav li a {
-    font-family:'sans-serif';
     font-weight: bold;
     font-size: 30px;
     color: black;
     text-decoration: none;
-    margin: 0px 50px;
+    margin: 0;
+}
+
+nav li a:hover {
+    color: blue;
+    text-decoration: underline;
 }
 
 main {
@@ -41,10 +53,12 @@ main {
     flex-direction: row-reverse;
     width: 100%;
 }
-
+.main-content {
+    width: 75%
+}
 .curve {
     height: 450px;
-    left: -15px;
+    left: 0px;
     position: absolute;
     top: -20px;
     width: 100%;
@@ -55,6 +69,7 @@ main {
     width: 100%;
     height: 400px;
 }
+
 
 .car-dog {
     position: relative;
@@ -69,21 +84,30 @@ h2 {
 }
 
 .bring-to-you {
+    background-image: url("../images/dog-car.jpg");
+    background-size: cover;
+    background-position: 50% 50%;
+    width: 100%;
+    height: 400px;
+    padding-left: 40px;
+}
+
+.bring-to-you p {
     position: absolute;
-    left: 375px;
-    bottom: 40%;
     color: white;
     font-weight: bold;
     font-size: 60px;
-    width: 600px;
-    height: 40px;
+    height: 100%;
+    width: 50%;
+    padding-top: 120px;
+    padding-left: 10px;
+    text-shadow: 2px 2px 8px #000000;
 }
 
 .steps {
     display: flex;
-    justify-content: space-between;
-    height: 200px;
-    width: 100%;
+    /* height: 200px; */
+    /* width: 100%; */
 } 
 
 #calendar-pic {
@@ -93,26 +117,26 @@ h2 {
 }
 
 .dot-top {
-    width: 120px;
+    width: 25%;
     height:60px;
     z-index: -1;
     background: transparent;
     border: none;
-    border-top: dotted 2px black;
+    border-top: dotted 10px black;
     padding: 40px 40px;
-    border-radius: 40%;
+    border-radius: 100%;
     margin: 20px -50px 0;
 }
 
 .dot-bottom {
-    width: 120px;
-    height:60px;
+    width: 33%;
+    height:140px;
     z-index: -1;
     background: transparent;
     border: none;
-    border-bottom: dotted 2px black;
+    border-bottom: dotted 10px black;
     padding: 40px 40px;
-    border-radius: 0 0 50% 50%;
+    border-radius: 100%;
     margin: 0 -65px;
 }
 
@@ -133,31 +157,28 @@ h2 {
 }
 
 figcaption { 
-    width: 25%;
+    width: 165px;
     display: flex;
     text-align: center;
+    margin-top: 10px;
 } 
 
 #cap-cal {
-    width: 45%;
     display: flex;
     text-align: center;
 }
 
 #cap-car {
-    width: 42%;
     display: flex;
     text-align: center;
 }
 
 #cap-sponge {
-    width: 45%;
     display: flex;
     text-align: center;
 }
 
 #cap-dog {
-    width: 55%;
     display: flex;
     text-align: center;
 }
@@ -171,16 +192,14 @@ aside {
 #green-box { 
     border: 3px;
     width: 85%;
-    height: 200px;
     border-radius: 10px;
-    padding: 5px;
+    padding: 30px 5px;
     background-color: rgba(9, 164, 60, 0.713);
     color: white;
 }
 
 #green-box p {
     font-size: 53px;
-    margin-top: 12px;
     text-align: center;
     font-family: 'Comic Sans MS', sans-serif;
 }
@@ -218,3 +237,118 @@ footer p {
     justify-content: flex-end;
 } 
 
+@media screen and (max-width: 1000px) {
+    #green-box {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #green-box p {
+        font-size: 45px;
+    }
+}
+
+@media screen and (max-width: 940px) {
+    #calendar-pic {
+        height: 125px;
+        width: 125px;
+        /* margin-left: 90px; */
+    }
+
+    #car-pic {
+        height: 125px;
+        width: 125px;
+    }
+    
+    #sponge-pic {
+        height: 125px;
+        width: 125px;
+    }
+    
+    #animated-dog-pic {
+        height: 125px;
+        width: 125px;
+        /* margin-left: -85px; */
+    }
+}
+
+@media screen and (max-width: 865px) {
+    figcaption { 
+        width: 130px;
+        display: flex;
+        text-align: center;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 845px) {
+    #green-box {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #green-box p {
+        font-size: 35px;
+    }
+
+    nav ul {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    nav li a {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .steps {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .dot-top {
+        display: none;
+    }
+
+    .dot-bottom {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 670px) {
+    #green-box {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #green-box p {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 543px) {
+    .bring-to-you p {
+        position: absolute;
+        color: white;
+        font-weight: bold;
+        font-size: 40px;
+        height: 100%;
+        width: 50%;
+        padding-top: 120px;
+        padding-left: 10px;
+        text-shadow: 2px 2px 8px #000000;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #green-box p {
+        font-size: 25%;
+    }
+
+    nav li a {
+        font-size: 20px;
+    }
+}
